@@ -12,7 +12,7 @@ static const char *RcsId = "$Id$";
 // $Author$
 //
 // Copyright (C) :      2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014
-//						European Synchrotron Radiation Facility
+//						European Synchrotron Radiation Facility,2015
 //                      BP 220, Grenoble 38043
 //                      FRANCE
 //
